--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -16,16 +16,16 @@
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme">
         <activity
-            android:name=".ListFileActivity_"
+            android:name=".Views.ListFileActivity_"
             android:label="@string/app_name" />
 
         <service
-            android:name=".FileObserver"
+            android:name=".FileSystem.FileObserver"
             android:enabled="true" />
 
         <provider
-            android:name=".OurFileProvider"
-            android:authorities="com.doplgangr.secrecy.DecryptFileProvider"
+            android:name=".FileSystem.OurFileProvider"
+            android:authorities="com.doplgangr.secrecy.FileSystem.DecryptFileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
@@ -34,10 +34,10 @@
         </provider>
 
         <activity
-            android:name=".ListVaultActivity_"
+            android:name=".Views.ListVaultActivity_"
             android:label="@string/app_name" />
         <activity
-            android:name=".FileViewer_"
+            android:name=".Views.FileViewer_"
             android:label="@string/title_activity_file_viewer">
 
             <!--
@@ -61,10 +61,10 @@
             android:name=".UpdateManager.UpdateManager_"
             android:label="@string/title_activity_update_manager" />
         <activity
-            android:name=".MainActivity_"
+            android:name=".Views.MainActivity_"
             android:label="@string/app_name"></activity>
         <activity
-            android:name=".FileImporter_"
+            android:name=".Views.FileImporter_"
             android:label="@string/import_files">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
@@ -96,7 +96,7 @@
 
 
         <activity
-            android:name="com.doplgangr.secrecy.LauncherActivity_"
+            android:name="com.doplgangr.secrecy.Views.LauncherActivity_"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
