move LICENSE and README back where they should be

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ChooseFolder"
+            android:name=".Views.ChooseFolder"
             android:label="@string/title_activity_choose_folder" />
         <activity
             android:name=".Settings.SettingsActivity_"
