--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:label="@string/chooser_title" />
         <activity
             android:name=".Views.MainActivity_"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name"/>
         <activity
             android:name=".Views.FileImportActivity_"
             android:label="@string/import_files">
