Apply purge function to file deletion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
         <service
             android:name=".FileSystem.FileObserver"
             android:enabled="true" />
+        <service
+            android:name=".FileSystem.FileOptionsService_"
+            android:enabled="true" />
+
 
         <provider
             android:name=".FileSystem.OurFileProvider"
