--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'com.android.application'
+apply plugin: 'crashlytics'
 apply plugin: 'android-apt'
 
+repositories {
+    mavenCentral()
+    maven { url 'http://download.crashlytics.com/maven' }
+}
 apt {
     arguments {
         androidManifestFile variant.processResources.manifestFile
@@ -22,6 +27,7 @@ android {
         release {
             runProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFile '/media/matthew/DATA/Projects/Secrecy/app/proguard-rules.pro'
         }
     }
 }
@@ -41,4 +47,5 @@ dependencies {
     compile project(':aFileChooser')
     compile project(':android-support-v4-preferencefragment')
     compile project(':payme')
+    compile 'com.crashlytics.android:crashlytics:1.+'
 }
