--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,12 +40,12 @@
             android:label="@string/chooser_title" />
         <activity
             android:name=".Views.MainActivity_"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name" />
         <activity
             android:name=".Views.FileImportActivity_"
             android:label="@string/import_files">
             <intent-filter>
-            <action android:name="android.intent.action.SEND" />
+                <action android:name="android.intent.action.SEND" />
 
                 <category android:name="android.intent.category.DEFAULT" />
 
@@ -77,7 +77,7 @@
             android:excludeFromRecents="true"
             android:label="@string/app_name">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -96,6 +96,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.doplgangr.secrecy.Views.MainActivity_" />
         </activity>
+
+        <meta-data
+            android:name="com.crashlytics.ApiKey"
+            android:value="ece21e8448f317038da716131b18b8affb2ac68b" />
     </application>
 
 </manifest>
