--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,12 @@ dependencies {
     compile project(':android-support-v4-preferencefragment')
     compile project(':payme')
     compile 'com.crashlytics.android:crashlytics:1.+'
+    compile project(':UserVoiceSDK')
+}
+
+android {
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
