--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:name=".CustomApp_"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/App__name"
         android:theme="@style/CustomActionBarTheme">
         <service
             android:name=".FileSystem.FileObserver"
@@ -41,16 +41,16 @@
         <activity
             android:name="com.ipaulpro.afilechooser.FileChooserActivity"
             android:icon="@drawable/ic_launcher"
-            android:label="@string/chooser_title" />
+            android:label="@string/Dialog_header__pick_file" />
         <activity
             android:name=".Views.MainActivity_"
             android:clearTaskOnLaunch="true"
             android:excludeFromRecents="true"
             android:finishOnTaskLaunch="true"
-            android:label="@string/app_name" />
+            android:label="@string/App__name" />
         <activity
             android:name=".Views.FileImportActivity_"
-            android:label="@string/import_files">
+            android:label="@string/Dialog_header__import_files">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
@@ -68,10 +68,10 @@
         </activity>
         <activity
             android:name=".Views.ChooseFolder"
-            android:label="@string/title_activity_choose_folder" />
+            android:label="@string/Page_header__choose_folder" />
         <activity
             android:name=".Settings.SettingsActivity_"
-            android:label="@string/title_activity_settings" />
+            android:label="@string/Page_header__settings" />
 
         <receiver android:name=".OutgoingCallReceiver_">
             <intent-filter android:priority="9999">
@@ -84,7 +84,7 @@
             android:clearTaskOnLaunch="true"
             android:excludeFromRecents="true"
             android:finishOnTaskLaunch="true"
-            android:label="@string/app_name">
+            android:label="@string/App__name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -93,7 +93,7 @@
         </activity>
         <activity
             android:name=".Premium.PremiumActivity_"
-            android:label="@string/donate_title" />
+            android:label="@string/Page_header__donation" />
         <activity
             android:name=".Views.FilePhotoFragment_"
             android:clearTaskOnLaunch="true"
@@ -107,7 +107,7 @@
         </activity>
         <activity
             android:name=".Views.FilesActivity_"
-            android:label="@string/app_name"
+            android:label="@string/App__name"
             android:parentActivityName=".Views.MainActivity_">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
