Add EventBus and Priority Queue as library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:19.0.0'
     compile 'com.android.support:support-v4:19.0.0'
     compile 'com.github.chrisbanes.photoview:library:1.2.3'
+    compile 'com.path:android-priority-jobqueue:1.1.2'
+    compile 'de.greenrobot:eventbus:2.2.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile project(':aFileChooser')
     compile project(':Preferencefragment')
