Fully implement Navigation Drawer -- add Android L navigation menu icon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,7 +87,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Premium.PremiumActivity_"
+            android:name=".Premium.PremiumFragment_"
             android:label="" />
         <activity
             android:name=".Views.FilePhotoFragment_"
