--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     // two lines
     compile 'org.apache.commons:commons-io:1.3.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.balysv.materialmenu:material-menu-abc:1.2.2'
     compile 'com.android.support:appcompat-v7:19.0.0'
     compile 'com.android.support:support-v4:19.0.0'
     compile 'com.github.chrisbanes.photoview:library:1.2.3'
@@ -49,7 +50,6 @@ dependencies {
     compile project(':Preferencefragment')
     compile project(':payme')
     compile 'com.crashlytics.android:crashlytics:1.+'
-    compile project(':UserVoiceSDK')
 }
 
 android {
