--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile project(':Preferencefragment')
     compile project(':payme')
     compile 'com.crashlytics.android:crashlytics:1.+'
+    compile 'com.google.protobuf:protobuf-java:2.6.0'
 }
 
 android {
