--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     // add these
     compile 'org.androidannotations:androidannotations-api:3.0.1'
     // two lines
-    compile 'org.apache.commons:commons-io:1.3.2'
+    compile 'commons-io:commons-io:2.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.balysv.materialmenu:material-menu-abc:1.2.2'
     compile 'com.android.support:appcompat-v7:19.0.0'
