Added RecyclerView to build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ apt {
 }
 android {
     compileSdkVersion 21
-    buildToolsVersion '21.0.0'
+    buildToolsVersion '21.0.2'
 
     defaultConfig {
         applicationId "com.doplgangr.secrecy"
@@ -40,8 +40,9 @@ dependencies {
     compile 'commons-io:commons-io:2.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.balysv.materialmenu:material-menu-abc:1.2.2'
-    compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.+'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.android.support:support-v4:21.0.+'
     compile 'com.github.chrisbanes.photoview:library:1.2.3'
     compile 'com.path:android-priority-jobqueue:1.1.2'
     compile 'de.greenrobot:eventbus:2.2.0'
