--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ repositories {
 }
 apt {
     arguments {
+        androidManifestFile variant.outputs[0].processResources.manifestFile
         resourcePackageName "com.doplgangr.secrecy"
     }
 }
@@ -33,9 +34,9 @@ android {
 }
 
 dependencies {
-    apt "org.androidannotations:androidannotations:3.0.1"
+    apt "org.androidannotations:androidannotations:3.1"
     // add these
-    compile 'org.androidannotations:androidannotations-api:3.0.1'
+    compile 'org.androidannotations:androidannotations-api:3.1'
     // two lines
     compile 'commons-io:commons-io:2.4'
     compile 'com.balysv.materialmenu:material-menu-abc:1.2.2'
