--- a/aFileChooser/build.gradle
+++ b/aFileChooser/build.gradle
@@ -8,6 +8,10 @@ android {
         minSdkVersion 10
         targetSdkVersion 19
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
