Removed Android Annotations from CustomApp

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:required="false" />
 
     <application
-        android:name=".CustomApp_"
+        android:name=".CustomApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/App__name"
