--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:required="false" />
 
     <application
-        android:name="com.doplgangr.secrecy.CustomApp"
+        android:name=".CustomApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/App__name"
@@ -20,7 +20,7 @@
 
         <provider
             android:name=".filesystem.OurFileProvider"
-            android:authorities="com.doplgangr.secrecy.filesystem.DecryptFileProvider"
+            android:authorities=".filesystem.DecryptFileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
@@ -34,7 +34,7 @@
             android:icon="@drawable/ic_launcher"
             android:label="@string/Dialog_header__pick_file" />
         <activity
-            android:name="com.doplgangr.secrecy.views.FileImportActivity"
+            android:name=".views.FileImportActivity"
             android:label="@string/Dialog_header__import_files">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
@@ -52,11 +52,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.doplgangr.secrecy.views.ChooseFolder"
+            android:name=".views.ChooseFolder"
             android:label="@string/Page_header__choose_folder" />
-        <activity
-            android:name=".settings.SettingsActivity_"
-            android:label="" />
 
         <receiver android:name=".OutgoingCallReceiver">
             <intent-filter android:priority="9999">
@@ -65,7 +62,7 @@
         </receiver>
 
         <activity
-            android:name="com.doplgangr.secrecy.views.MainActivity"
+            android:name=".views.MainActivity"
             android:clearTaskOnLaunch="true"
             android:excludeFromRecents="true"
             android:finishOnTaskLaunch="true"
@@ -76,26 +73,23 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".premium.PremiumFragment"
-            android:label="" />
-        <activity
-            android:name="com.doplgangr.secrecy.views.FilePhotoFragment"
+            android:name=".views.FilePhotoFragment"
             android:clearTaskOnLaunch="true"
             android:excludeFromRecents="true"
             android:finishOnTaskLaunch="true"
             android:label=""
-            android:parentActivityName="com.doplgangr.secrecy.views.FilesActivity">
+            android:parentActivityName=".views.FilesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.doplgangr.secrecy.views.FilesActivity" />
+                android:value=".views.FilesActivity" />
         </activity>
         <activity
-            android:name="com.doplgangr.secrecy.views.FilesActivity"
+            android:name=".views.FilesActivity"
             android:label=""
-            android:parentActivityName="com.doplgangr.secrecy.views.MainActivity">
+            android:parentActivityName=".views.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.doplgangr.secrecy.views.MainActivity" />
+                android:value=".views.MainActivity" />
         </activity>
     </application>
 
