--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,11 @@
             android:label=""
             android:parentActivityName=".activities.MainActivity">
         </activity>
+        <service
+            android:name=".services.ScreenStateService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
