--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,55 @@
-*~
-.gradle
-/build
-/payme/build
-/aFileChooser/build
-/Preferencefragment/build
-local.properties
-/src/gen
 *.apk
-/crashlytics.properties
-/mapping.txt
-/seeds.txt
+*.classpath
+*.iml
+*.log
+*.project
+*.settings
+*.sublime-*
+*.swp
+*~
+.DS_Store
+.gradle
+.idea
+.nb-gradle
+.textmate
+/*.iml
+/*.ipr
+/*.iws
+/Preferencefragment/build
+/aFileChooser/build
 /app/src/main/assets/
 /app/src/main/crashlytics.properties
 /app/src/main/res/values/com_crashlytics_export_strings.xml
-/unused.txt
-/out
-/intTestHomeDir
-/subprojects/*/out
-/intellij
-/buildSrc/lib
+/bin
+/build
+/buildSrc/*.iml
+/buildSrc/*.ipr
+/buildSrc/*.iws
 /buildSrc/build
+/buildSrc/lib
+/buildSrc/out
+/crashlytics.properties
+/incoming-distributions
+/intTestHomeDir
+/intellij
+/mapping.txt
+/out
+/payme/build
+/performanceTest/build
+/performanceTest/lib
+/seeds.txt
+/src/gen
+/subprojects/*/*.iml
+/subprojects/*/bin
 /subprojects/*/build
+/subprojects/*/ide
+/subprojects/*/out
 /subprojects/docs/src/samples/*/*/build
+/unused.txt
 /website/build
 /website/website.iml
 /website/website.ipr
 /website/website.iws
-/performanceTest/build
-/subprojects/*/ide
-/*.iml
-/*.ipr
-/*.iws
-/subprojects/*/*.iml
-/buildSrc/*.ipr
-/buildSrc/*.iws
-/buildSrc/*.iml
-/buildSrc/out
-*.classpath
-*.project
-*.settings
-/bin
-/subprojects/*/bin
-.DS_Store
-/performanceTest/lib
-.textmate
-/incoming-distributions
-.idea
-*.sublime-*
-.nb-gradle
-log/
-*.iml
 build
+local.properties
+log/
